Release Notes:

- Klaw (formerly Kafkawize) Release 1.0.0

- This release is cloned from master branch of https://github.com/muralibasani/kafkawize
- Package renamed to io.aiven.klaw
- Introduced 'kafka flavor' in the configuration of clusters
- Changes to manage Aiven Acls
- All occurences of Kafkawize renamed to Klaw
- Few code enhancements

-----------------------------------------------------------------------------------

- The below changes are part of release 5.0.3

- ACLs can be added based on Usernames (plain text principles). Ex : alice, john
    On kafka cluster, Producer acls reflects like below for user 'alice' for a topic.
    (principal=User:alice, host=*, operation=WRITE, permissionType=ALLOW)
    (principal=User:alice, host=*, operation=WRITE, permissionType=ALLOW)

-----------------------------------------------------------------------------------
- The below changes are part of release 5.0.2

- Introducing Liquibase for all database migrations
- Recaptcha validation can be disabled if running in saas mode

-----------------------------------------------------------------------------------

- The below changes are part of release 5.0.1

- Now users can request for multiple acls in one request. Earlier it was either one IP address or one Principle in one request.
- Minor bug fix

-----------------------------------------------------------------------------------

The below changes are part of release Kafkawize 5.0.0

Total Kafkawize pro code is merged to Opensource version. Includes all the features.

Features:

Topics (approval): Create, Update, Delete, Promote
Acls (approval):  Create
Connectors (approval): Create
Avro Schemas (approval): Create
Topic Overview :
    Topic Config
    Promote
    Literal and Prefixed subscriptions
    Topic documentation
    Consumer offsets/ lag
    View topic contents
View created, completed, declined, all Topic requests
View created, completed, declined, all Acl requests