@@ -405,7 +405,7 @@ public class AclControllerServiceTest {
     when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
         .thenReturn(Collections.singletonList("1"));
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
-    when(clusterApiService.getAcls(anyString(), anyString(), anyString(), anyInt()))
+    when(clusterApiService.getAcls(anyString(), any(), anyString(), anyString(), anyInt()))
         .thenReturn(utilMethods.getClusterAcls());
     when(handleDbRequests.selectAllTeamsOfUsers(anyString(), anyInt()))
         .thenReturn(getAvailableTeams());
@@ -431,7 +431,7 @@ public class AclControllerServiceTest {
     when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
         .thenReturn(Collections.singletonList("1"));
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
-    when(clusterApiService.getAcls(anyString(), anyString(), anyString(), anyInt()))
+    when(clusterApiService.getAcls(anyString(), any(), anyString(), anyString(), anyInt()))
         .thenReturn(utilMethods.getClusterAcls());
     when(handleDbRequests.selectAllTeamsOfUsers(anyString(), anyInt()))
         .thenReturn(getAvailableTeams());
