@@ -7,6 +7,7 @@ Release Notes:
 - Introduced 'kafka flavor' in the configuration of clusters
 - Changes to manage Aiven Acls
 - All occurences of Kafkawize renamed to Klaw
+- Synchronize Aiven kafka acls from cluster to Klaw (for existing Kafka clusters)
 - Few code enhancements
 
 -----------------------------------------------------------------------------------
